# Givil-und-sein-C

./: .gitignore  CMakeLists.txt  README.md  main.c
examplesForUnderstanding/: C1.h  C2.c  C2.h  args.c  args.h  args_demo.c  args_demo.h  array.c  array.h  arrayError.c  arrayError.h  array_demo.c  array_demo.h  bitweiseOperatoren.c  bitweiseOperatoren.h  callByReference.c  callByReference.h  callByValue.c  callByValue.h  casting.c  casting.h  chess_complexer.c  chess_complexer.h  chess_rudementary.c  chess_rudementary.h  datentypen.c  datentypen.h  doSmth.c  doSmth.h  dynmem_demo.c  dynmem_demo.h  enumeration.c  enumeration.h  escape.c  escape.h  facultaet.c  facultaet.h  forloop.c  forloop.h  formats.c  (+54 more)
